--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   redux: ^3.0.0
   flutter_redux: ^0.5.2
   redux_logging: ^0.3.0
+  charts_flutter: ^0.6.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
